Добавил справочник "Варианты настроек рабочего стола". Переделал логику хранения настроек. Добавил вывод иконок объектов

--- a/Управление_торговлей_демо_115.РабочийСтол1С/src/DataProcessors/РабочийСтол/Forms/ФормаСохраненияНастройки/Form.form
+++ b/Управление_торговлей_демо_115.РабочийСтол1С/src/DataProcessors/РабочийСтол/Forms/ФормаСохраненияНастройки/Form.form
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form:Form xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:core="http://g5.1c.ru/v8/dt/mcore" xmlns:form="http://g5.1c.ru/v8/dt/form">
   <items xsi:type="form:FormField">
+    <name>НаименованиеНастройки</name>
+    <id>27</id>
+    <visible>true</visible>
+    <enabled>true</enabled>
+    <userVisible>
+      <common>true</common>
+    </userVisible>
+    <dataPath xsi:type="form:DataPath">
+      <segments>НаименованиеНастройки</segments>
+    </dataPath>
+    <extendedTooltip>
+      <name>НаименованиеНастройкиРасширеннаяПодсказка</name>
+      <id>29</id>
+      <visible>true</visible>
+      <enabled>true</enabled>
+      <userVisible>
+        <common>true</common>
+      </userVisible>
+      <type>Label</type>
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <extInfo xsi:type="form:LabelDecorationExtInfo">
+        <horizontalAlign>Left</horizontalAlign>
+      </extInfo>
+    </extendedTooltip>
+    <contextMenu>
+      <name>НаименованиеНастройкиКонтекстноеМеню</name>
+      <id>28</id>
+      <visible>true</visible>
+      <enabled>true</enabled>
+      <userVisible>
+        <common>true</common>
+      </userVisible>
+      <autoFill>true</autoFill>
+    </contextMenu>
+    <type>InputField</type>
+    <editMode>Enter</editMode>
+    <showInHeader>true</showInHeader>
+    <headerHorizontalAlign>Left</headerHorizontalAlign>
+    <showInFooter>true</showInFooter>
+    <extInfo xsi:type="form:InputFieldExtInfo">
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <wrap>true</wrap>
+      <autoMarkIncomplete>true</autoMarkIncomplete>
+      <chooseType>true</chooseType>
+      <typeDomainEnabled>true</typeDomainEnabled>
+      <textEdit>true</textEdit>
+    </extInfo>
+  </items>
+  <items xsi:type="form:FormField">
     <name>МетодСохранения</name>
     <id>1</id>
     <visible>true</visible>
@@ -538,6 +589,41 @@
       <value>Адрес настройки</value>
     </title>
     <id>5</id>
+    <valueType>
+      <types>String</types>
+      <stringQualifiers/>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
+  <attributes>
+    <name>ВариантНастройки</name>
+    <title>
+      <key>ru</key>
+      <value>Вариант настройки</value>
+    </title>
+    <id>6</id>
+    <valueType>
+      <types>CatalogRef.РБ_ВариантыНастроекРабочегоСтола</types>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
+  <attributes>
+    <name>НаименованиеНастройки</name>
+    <title>
+      <key>ru</key>
+      <value>Наименование настройки</value>
+    </title>
+    <id>7</id>
     <valueType>
       <types>String</types>
       <stringQualifiers/>
